--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/CamielJalink/Advent-of-Code-2022/issues"
   },
-  "homepage": "https://github.com/CamielJalink/Advent-of-Code-2022#readme"
+  "homepage": "https://github.com/CamielJalink/Advent-of-Code-2022#readme",
+  "dependencies": {
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.0",
+    "typescript": "^4.9.3"
+  }
 }
