--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Repository for solving the 2022 Advent-of-Code programming puzzles",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "startPart1": "npm run lint && tsc && node ./dist/startPart1.js",
+        "startPart2": "npm run lint && tsc && node ./dist/startPart2.js",
+        "lint": "eslint . --ext .ts",
         "generateDay": "node generateDay.js"
     },
     "repository": {
